<resources>
    <string name="app_name">EMPLOYEE</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="signout">SignOut</string>
    <string name="employee_details">Employee Details</string>
    <string name="employee_details_form">Employee Details Form</string>
    <string name="name">Name</string>
    <string name="salary">Salary</string>
    <string name="company_name">Company Name</string>
    <string name="save">save</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your Password ?</string>
    <string name="login">Login</string>
    <string name="or">--------------------------or-------------------------</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_account_sign_up_now">Don\'t Have account ? sign up now</string>
    <string name="user_registration">User Registration</string>
    <string name="user_name">User Name *</string>
    <string name="user_email_name">User Email Name</string>
    <string name="mobile">Mobile *</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pass1">Password *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="already_a_member_click">Already a Member ? Click</string>
    <string name="here">here</string>
    <string name="to_login">to Login</string>
    <string name="employee_update_form">Employee Update Form</string>

    <string-array name="roles">
        <item>Jr.Android Developer</item>
        <item>Associate Android Developer</item>
        <item>Jr.Android Developer</item>
        <item>Mobile Application Developer</item>
        <item>Android Engineer</item>
        <item>Sr.Android Developer</item>
        <item>Staff Software Engineer Android</item>
        <item>Senior Staff Software Engineer Android</item>
        <item>Android Tech Lead</item>
    </string-array>
</resources>