<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginRegister.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="18dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/user_registration"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/user_name"
             />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_email_name"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
             />

        <EditText
            android:id="@+id/etMobileNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="10"
            android:hint="@string/mobile_number"
            android:inputType="number"

            />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass1"
             />

        <EditText
            android:id="@+id/etpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            />

        <EditText
            android:id="@+id/etRePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:backgroundTint="#024C4C" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/already_a_member_click" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/here"
                android:textColor="#1E88E5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/to_login"
                tools:ignore="DuplicateIds" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>